Cleanup osz parser and project files

--- a/config/config.json
+++ b/config/config.json
@@ -18,11 +18,11 @@
         "Enable": true,
         "Loop": false,
         "Volume": 0.05,
-        "Audio Path": "./beatmaps/928482/928482_audio_Hard.mp3"
+        "Audio Path": "./beatmaps/Roki - Hard/Roki - Hard_audio.mp3"
     },
     "Audio movement data": {
-        "Hitpoints JSON": "../beatmaps/928482/928482_times_Hard.json",
-        "BPMs JSON": "../beatmaps/928482/928482_bpms_Hard.json"
+        "Hitpoints JSON": "../beatmaps/Roki - Hard/Roki - Hard_times.json",
+        "BPMs JSON": "../beatmaps/Roki - Hard/Roki - Hard_bpms.json"
     },
     "Maze": {
         "Maze JSON": "../parser/data_lines.json"
